# stock-movement-classifier

./: .gitignore  README.md  changelog.md  config.yaml  data  models  requirements.txt  setup.cfg
src/smc/: labels.py
src/smc/data/: download.py  test.py  validate.py
src/stock_movement_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_labels.py
