[metadata]
name = stock-movement-classifier
version = 0.1.0
description = Stock price movement classifier using LSTM and Transformer models
long_description = file: README.md
long_description_content_type = text/markdown
author = Vanilson Eliseu
license = MIT
url = https://github.com/DonSaca/stock-movement-classifier
project_urls =
    Bug Tracker = https://github.com/DonSaca/stock-movement-classifier/issues
    Documentation = https://github.com/DonSaca/stock-movement-classifier#readme
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    numpy
    pandas
    yfinance
    ta
    scikit-learn
    torch
    pyyaml
    joblib

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    matplotlib
    pre-commit
    jupyter
